Update common/.config/taskfiles/fix/Taskfile.yml, common/.config/taskfiles/lint/Taskfile.yml, common/.gitlab/ci/lint/shellcheck.gitlab-ci.yml

--- a/common/.config/taskfiles/lint/Taskfile.yml
+++ b/common/.config/taskfiles/lint/Taskfile.yml
@@ -254,9 +254,9 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          {{.NPX_HANDLE}}shellcheck {{.CLI_ARGS}}
+          {{.NPX_HANDLE}}shellcheck -x {{.CLI_ARGS}}
         {{else}}
-          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) -print0 | xargs -0 -r -n1 {{.NPX_HANDLE}}shellcheck
+          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) -print0 | xargs -0 -r -n1 {{.NPX_HANDLE}}shellcheck -x
         {{end}}
 
   spelling:
