--- a/common/.config/taskfiles/fix/Taskfile.yml
+++ b/common/.config/taskfiles/fix/Taskfile.yml
@@ -195,10 +195,10 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          {{.NPX_HANDLE}}shellcheck -f diff {{.CLI_ARGS}} | git apply
+          {{.NPX_HANDLE}}shellcheck -x -f diff {{.CLI_ARGS}} | git apply
         {{else}}
           find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) \
-            -print0 | xargs -0 {{.NPX_HANDLE}}shellcheck -f diff | git apply
+            -print0 | xargs -0 {{.NPX_HANDLE}}shellcheck -x -f diff | git apply
         {{end}}
 
   xml:
