--- a/.config/taskfiles/install/Taskfile.yml
+++ b/.config/taskfiles/install/Taskfile.yml
@@ -38,36 +38,13 @@ tasks:
   modules:local:
     deps:
       - :install:npm:{{.NPM_PROGRAM_LOCAL}}
-      - modules:local:package
+      - :install:npm:cz-emoji
     cmds:
       - cmd: '{{.NPM_PROGRAM_LOCAL}} install'
         ignore_error: true
-      - |
-        task install:npm:cz-emoji &
-        task install:modules:local:sync &
-    sources:
-      - .cache/package-deps.json
-
-  modules:local:package:
-    deps:
-      - :install:software:jq
-    env:
-      NPM_DEPS:
-        sh: jq -r '.dependencies | keys[] as $k | "\($k), \(.[$k])"' package.json
-      NPM_DEVDEPS:
-        sh: jq -r '.devDependencies | keys[] as $k | "\($k), \(.[$k])"' package.json
-      NPM_OPTDEPS:
-        sh: jq -r '.optionalDependencies | keys[] as $k | "\($k), \(.[$k])"' package.json
-    run: when_changed
-    cmds:
-      - mkdir -p .cache
-      - echo "$NPM_DEPS" > .cache/package-deps.json
-      - echo "$NPM_DEVDEPS" >> .cache/package-deps.json
-      - echo "$NPM_OPTDEPS" >> .cache/package-deps.json
+      - task: modules:local:sync
     sources:
       - package.json
-    generates:
-      - .cache/package-deps.json
 
   modules:local:sync:
     cmds:
@@ -76,7 +53,7 @@ tasks:
           find ./node_modules/$PATTERN -maxdepth 0 | while read PATHH; do
             if [ -f "$PATHH/package.json" ]; then
               PKG="$(echo $PATHH | sed 's/.\/node_modules\///')"
-              task install:modules:local:sync:package -- "$PKG" &
+              task install:modules:local:sync:package -- "$PKG"
             fi
           done
         done
