--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -42,7 +42,7 @@ tasks:
     cmds:
       - cmd: '{{.NPM_PROGRAM_LOCAL}} install'
         ignore_error: true
-      # - task: modules:local:sync
+      - task: modules:local:sync
     sources:
       - package.json
 
@@ -64,11 +64,14 @@ tasks:
       - cmd: |
           LATEST="$(npm view {{.CLI_ARGS}} version)"
           LOCAL="$(jq -r '.version' ./node_modules/{{.CLI_ARGS}}/package.json)"
+          if [ -f "1" ]; then echo "CREATED ALREADY"; fi
           COMPARE="$(. .config/scripts/lib/semver-compare.sh $LOCAL $LATEST)"
+          if [ -f "1" ]; then echo "CREATED ALREADY222"; fi
           if [ "$COMPARE" == '-1' ]; then
             true info "Version $LATEST is available for {{.CLI_ARGS}} (currently version $LOCAL)"
             {{.NPM_PROGRAM_LOCAL}} update {{.CLI_ARGS}}
           fi
+          if [ -f "1" ]; then echo "CREATED ALREADY444"; fi
         ignore_error: true
 
   modules:prompt:
