--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -62,16 +62,16 @@ tasks:
     run: when_changed
     cmds:
       - cmd: |
-          LATEST="$(npm view {{.CLI_ARGS}} version)"
+          LATEST="$(npm view '{{.CLI_ARGS}}' version)"
           LOCAL="$(jq -r '.version' ./node_modules/{{.CLI_ARGS}}/package.json)"
-          if [ -f "1" ]; then echo "CREATED ALREADY"; fi
+          if [ -f "1" ]; then echo "CREATED ALREADY {{.TIMESTAMP}}"; fi
           COMPARE="$(. .config/scripts/lib/semver-compare.sh $LOCAL $LATEST)"
-          if [ -f "1" ]; then echo "CREATED ALREADY222"; fi
+          if [ -f "1" ]; then echo "CREATED ALREADY222 {{.TIMESTAMP}}"; fi
           if [ "$COMPARE" == '-1' ]; then
             true info "Version $LATEST is available for {{.CLI_ARGS}} (currently version $LOCAL)"
             {{.NPM_PROGRAM_LOCAL}} update {{.CLI_ARGS}}
           fi
-          if [ -f "1" ]; then echo "CREATED ALREADY444"; fi
+          if [ -f "1" ]; then echo "CREATED ALREADY444 {{.TIMESTAMP}}"; fi
         ignore_error: true
 
   modules:prompt:
