--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -39,6 +39,7 @@ tasks:
     deps:
       - :install:npm:{{.NPM_PROGRAM_LOCAL}}
       - :install:npm:cz-emoji
+    run: once
     cmds:
       - cmd: '{{.NPM_PROGRAM_LOCAL}} install'
         ignore_error: true
@@ -59,19 +60,15 @@ tasks:
         done
 
   modules:local:sync:package:
-    run: when_changed
     cmds:
       - cmd: |
           LATEST="$(npm view '{{.CLI_ARGS}}' version)"
           LOCAL="$(jq -r '.version' ./node_modules/{{.CLI_ARGS}}/package.json)"
-          if [ -f "1" ]; then echo "CREATED ALREADY {{.TIMESTAMP}}"; fi
           COMPARE="$(. .config/scripts/lib/semver-compare.sh "$LOCAL" "$LATEST")"
-          if [ -f "1" ]; then echo "CREATED ALREADY222 {{.TIMESTAMP}}"; fi
           if [ "$COMPARE" == '-1' ]; then
             true info "Version $LATEST is available for {{.CLI_ARGS}} (currently version $LOCAL)"
             {{.NPM_PROGRAM_LOCAL}} update {{.CLI_ARGS}}
           fi
-          if [ -f "1" ]; then echo "CREATED ALREADY444 {{.TIMESTAMP}}"; fi
         ignore_error: true
 
   modules:prompt:
