--- a/common/.config/taskfiles/git/Taskfile.yml
+++ b/common/.config/taskfiles/git/Taskfile.yml
@@ -151,8 +151,13 @@ tasks:
     deps:
       - :install:software:glab
     cmds:
-      - glab api projects/:fullpath/protected_branches -X POST -f name=protected-* -f code_owner_approval_required=true 2&>1 /dev/null
-      - glab api projects/:fullpath/protected_branches -X POST -f name=synchronize -f code_owner_approval_required=true 2&>1 /dev/null
+      - |
+        if [ "$(glab api projects/:fullpath/protected_branches/master | jq '.code_owner_approval_required')" == 'false' ]; then
+          glab api projects/:fullpath/protected_branches/master -X DELETE
+          glab api projects/:fullpath/protected_branches -X POST -f name=master -f code_owner_approval_required=true > /dev/null
+        fi
+      - glab api projects/:fullpath/protected_branches -X POST -f name=protected-* -f code_owner_approval_required=true > /dev/null
+      - glab api projects/:fullpath/protected_branches -X POST -f name=synchronize -f code_owner_approval_required=true > /dev/null
       - . .config/log info "Set up protected branches"
 
   gitlab:create:
