--- a/common/docs/CODEOWNERS
+++ b/common/docs/CODEOWNERS
@@ -1,3 +1,5 @@
+# Prevents modifications to CI configurations
 .github/ @ProfessorManhattan
 .gitlab-ci.yml @ProfessorManhattan
 .gitlab/ @ProfessorManhattan
+.travis.yml @ProfessorManhattan
