--- a/common/.config/taskfiles/common/Taskfile.yml
+++ b/common/.config/taskfiles/common/Taskfile.yml
@@ -50,7 +50,7 @@ tasks:
       to your regular `git commit -m` command to bypass the pre-commit hook.
     cmds:
       - . ./.config/husky/pre-commit
-      - true info "Initiating the commit dialog"
+      - . .config/log info "Initiating the commit dialog"
       - exec < /dev/tty && git cz --hook || true
 
   husky:
@@ -79,7 +79,7 @@ tasks:
         if [ -d .git ] && [ "${container:=}" != 'docker' ]; then
           {{.NPX_HANDLE}}husky install .config/husky
         else
-          true warn 'Cannot run `husky install` because there is no `.git/` folder (or this is a Docker container)'
+          . .config/log warn 'Cannot run `husky install` because there is no `.git/` folder (or this is a Docker container)'
         fi
     status:
       - '[ ! -d .git ] || [[ "${container:=} == "docker" ]]'
