--- a/common/.config/taskfiles/lint/Taskfile.yml
+++ b/common/.config/taskfiles/lint/Taskfile.yml
@@ -68,7 +68,7 @@ tasks:
     summary: |
       # Lint Dockerfiles using Hadolint
 
-      Hadolint is a linter for Dockerfiles. This task uses Hadolint to reportrue warnings
+      Hadolint is a linter for Dockerfiles. This task uses Hadolint to report warnings
       and suggestions so that the project is using best practices and is less likely to
       have errors. The task uses Docker to run an ultra-compact container that includes
       Hadolint. Installing Hadolint is done at runtime. The task scans for all files that
@@ -131,7 +131,7 @@ tasks:
       - :install:modules:local
       - :install:npm:eslint
     cmds:
-      - '{{.NPX_HANDLE}}eslint -c package.json --no-eslintrc --format pretty --ext .js,.jsx,.ts --cache
+      - '{{.NPX_HANDLE}}eslint -c package.json --no-eslintrc --format pretty --ext .js,.jsx,.ts,.tsx --cache
         --cache-location .cache/eslintcache {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   lint-staged:
