--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-emoji"
+      "path": "cz-emoji-conventional"
     }
   },
   "dependencies": {
@@ -36,11 +36,15 @@
     "string-break": "^1.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@mblabs/eslint-config": "^1.0.115",
     "@mblabs/prettier-config": "^14.14.32",
     "@mblabs/release-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "commitizen": "^4.2.4",
     "commitlint-config-gitmoji": "^2.2.5",
+    "cz-emoji-conventional": "^1.0.1",
     "glob": "^7.2.0",
     "handlebars-helpers": "^0.10.0",
     "semantic-release": "^18.0.0",
