--- a/.config/taskfiles/install/Taskfile-npm.yml
+++ b/.config/taskfiles/install/Taskfile-npm.yml
@@ -100,7 +100,7 @@ tasks:
           else
             {{if eq .NPX_HANDLE ""}}{{.NPM_PROGRAM}} install -g {{.NPM_PACKAGE}}@latest{{else}}{{.NPX_PROGRAM}} -y {{.NPM_PACKAGE}}{{end}}
           fi
-          true success 'The npm `{{.NPM_PACKAGE}}` package is installed'
+          . .config/log success 'The `{{.NPM_PACKAGE}}` NPM package successfully installed'
         fi
     status:
       - type {{if .NPM_PACKAGE_BIN}}{{.NPM_PACKAGE_BIN}}{{else}}{{.NPM_PACKAGE}}{{end}} &> /dev/null
@@ -111,7 +111,7 @@ tasks:
     cmds:
       - |
         function installLibrary() {
-            if ! npm list -g {{.NPM_PROGRAM}} 2&>1 /dev/null; then
+            if ! npm list -g {{.NPM_PROGRAM}} > /dev/null; then
               {{if eq .NPX_HANDLE ""}}{{.NPM_PROGRAM}} install -g {{.NPM_PACKAGE}}@latest{{else}}{{.NPX_PROGRAM}} -y {{.NPM_PACKAGE}}{{end}}
             fi
         }
@@ -121,7 +121,6 @@ tasks:
           else
             installLibrary &
           fi
-          true success 'The npm `{{.NPM_PACKAGE}}` package is installed'
         fi
 
   hbs:
