--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-emoji-conventional"
+      "path": "node_modules/cz-emoji-conventional"
     }
   },
   "dependencies": {
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "commitizen": "^4.2.4",
     "commitlint-config-gitmoji": "^2.2.5",
+    "cz-conventional-changelog-emoji": "^0.1.0",
     "cz-emoji-conventional": "^1.0.1",
     "glob": "^7.2.0",
     "handlebars-helpers": "^0.10.0",
