--- a/package.json
+++ b/package.json
@@ -23,30 +23,19 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-conventional-changelog-emoji"
+      "path": "node_modules/cz-emoji-conventional"
     }
   },
   "dependencies": {
     "tslib": "^2.3.1"
   },
-  "optionalDependencies": {
-    "chalk": "^4.1.2",
-    "inquirer": "^8.2.0",
-    "signale": "^1.4.0",
-    "string-break": "^1.2.0"
-  },
+  "optionalDependencies": {},
   "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
-    "@mblabs/eslint-config": "^1.0.115",
-    "@mblabs/prettier-config": "^14.14.32",
-    "@mblabs/release-config": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "cz-emoji-conventional": "^1.0.1",
-    "glob": "^7.2.0",
-    "handlebars-helpers": "^0.10.0",
-    "semantic-release": "^18.0.0",
-    "typescript": "^4.5.2"
+    "@washingtondc/development": "^1.0.2",
+    "@washingtondc/eslint": "^1.0.0",
+    "@washingtondc/prettier": "^1.0.0",
+    "@washingtondc/release": "^0.0.1",
+    "parunner": "^0.0.1"
   },
   "keywords": [
     "common",
