--- a/.config/taskfiles/common/Taskfile.yml
+++ b/.config/taskfiles/common/Taskfile.yml
@@ -199,7 +199,7 @@ tasks:
 
   shell:prompt:
     deps:
-      - :install:modules:prompt
+      - :install:modules:local
     interactive: true
     env:
       WORKDIR:
