--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -41,7 +41,7 @@ tasks:
       - :install:npm:cz-emoji
     run: once
     cmds:
-      - cmd: '{{.NPM_PROGRAM_LOCAL}} install'
+      - cmd: '{{.NPM_PROGRAM_LOCAL}} i --shamefully-hoist'
         ignore_error: true
       - task: modules:local:sync
     sources:
@@ -67,7 +67,7 @@ tasks:
           COMPARE="$(. .config/scripts/lib/semver-compare.sh "$LOCAL" "$LATEST")"
           if [ "$COMPARE" == '-1' ]; then
             . .config/log info "Version $LATEST is available for {{.CLI_ARGS}} (currently version $LOCAL)"
-            {{.NPM_PROGRAM_LOCAL}} update {{.CLI_ARGS}}
+            {{.NPM_PROGRAM_LOCAL}} update {{.CLI_ARGS}}@latest
           fi
         ignore_error: true
 
