--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 homepage = "https://megabyte.space"
 documentation = "https://megabyte.space/docs/common/shared"
-keywords = ["common", "configurations", "files", "gitlab-ci", "mblabs", "megabytelabs", "npm", "package", "professormanhattan", "shared", "taskfiles"]
+keywords = ["common", "configurations", "files", "gitlab-ci", "mblabs", "megabytelabs", "npm", "package", "professormanhattan", "shared", "taskfiles", "washingtondc"]
 include = ["CHANGELOG.md", "LICENSE"]
 classifiers = [
   "Development Status :: 4 - Beta",
