--- a/.config/taskfiles/upstream/Taskfile.yml
+++ b/.config/taskfiles/upstream/Taskfile.yml
@@ -56,34 +56,12 @@ tasks:
 
   template:
     cmds:
-      - task: template:handlebars
-      - task: template:hbs
+      - task: template:liquidjs
 
-  template:handlebars:
+  template:liquidjs:
     deps:
       - :install:modules:local
-      - :install:npm:hbs
-    cmds:
-      - |
-        function handlebars() {
-          FILE="$1"
-          TMP="$(mktemp)"
-          {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "$TMP"
-          mv "$TMP" "${FILE%.*}"
-          rm "$FILE"
-        }
-        find . -type f -not \( {{.ADDITIONAL_IGNORE_FOLDERS}} {{.IGNORE_FOLDERS}} \) -prune -name '*.handlebars' | while read FILE; do
-          handlebars "$FILE" &
-        done
-        find .config -type f -name '*.handlebars' | while read FILE; do
-          handlebars "$FILE" &
-        done
-        wait
-
-  template:hbs:
-    deps:
-      - :install:modules:local
-      - :install:npm:hbs
+      - :install:npm:liquidjs
     vars:
       PYTHON_BREW_NOTICE: In order for this file to be generated, the customPyPiPackageName needs to be specified in the
         blueprint section of package.json and the PyPi package needs to be installed on the system.
@@ -92,10 +70,10 @@ tasks:
         sh: mktemp
     cmds:
       - |
-        if [ '{{.REPOSITORY_TYPE}}' == 'python' ] && [ -f '.config/brew/python.hbs.rb' ]; then
+        if [ '{{.REPOSITORY_TYPE}}' == 'python' ] && [ -f '.config/brew/python.rb.liquid' ]; then
           BINARY_NAME="$(jq -r '.customPyPiPackageName' .variables.json)"
           if [ "$BINARY_NAME" == 'null' ] || ! type "$BINARY_NAME" &> /dev/null; then
-            echo "{{.PYTHON_BREW_NOTICE}}" > .config/brew/python.hbs.rb
+            echo "{{.PYTHON_BREW_NOTICE}}" > .config/brew/python.rb.liquid
           fi
         fi
       - cp package.json package.json.bak
@@ -104,13 +82,13 @@ tasks:
           FILE="$1"
           TMP="$(mktemp)"
           {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "$TMP"
-          mv "$TMP" "${FILE//.hbs}"
+          mv "$TMP" "${FILE//.liquid}"
           rm "$FILE"
         }
-        find . -type f -not \( {{.ADDITIONAL_IGNORE_FOLDERS}} {{.IGNORE_FOLDERS}} \) -prune -name '*.hbs.*' | while read FILE; do
+        find . -type f -not \( {{.ADDITIONAL_IGNORE_FOLDERS}} {{.IGNORE_FOLDERS}} \) -prune -name '*.liquid' | while read FILE; do
           handlebars "$FILE" &
         done
-        find .config -type f -name '*.hbs.*' | while read FILE; do
+        find .config -type f -name '*.liquid' | while read FILE; do
           handlebars "$FILE" &
         done
         wait
