--- a/.config/taskfiles/vscode/Taskfile.yml
+++ b/.config/taskfiles/vscode/Taskfile.yml
@@ -49,16 +49,11 @@ tasks:
 
       This is a simple implementation. There are many features provided by VS Code that we
       can potentially leverage to make our `tasks.json` better and more useful to developers.
-    env:
-      TASK_LIST:
-        sh: task --list
-      TMP:
-        sh: mktemp
     run: when_changed
     cmds:
       - |
+        TMP="$(mktemp)"
         echo '{"version": "2.0.0"}' > "$TMP"
-      - |
         TASKS='['
         while read LINE; do
           if [ "${LINE:0:1}" == '*' ]; then
@@ -69,6 +64,6 @@ tasks:
             COMMAND="bash .config/scripts/vscode.sh && task $TASK_NAME"
             TASKS+="{\"label\": \"$LABEL\", \"type\": \"$TYPE\", \"command\": \"$COMMAND\"},"
           fi
-        done <<< "$TASK_LIST"
+        done <<< "$(task --list)"
         jq --arg tasks "${TASKS%?}]" '.tasks = ($tasks | fromjson)' "$TMP" > '{{.TASKS_FILE}}'
       - prettier --write '{{.TASKS_FILE}}'
